--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,44 +1,29 @@
-buildscript {
-    repositories {
-        jcenter()
-    }
-    dependencies {
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.4'
-    }
-}
-
 repositories {
     maven { url 'https://github.com/dahlgren/vpi-aar/raw/master' }
 }
 
 apply plugin: 'com.android.application'
-apply plugin: 'com.neenbedankt.android-apt'
+//apply plugin: 'com.neenbedankt.android-apt'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion '25.0.2'
+    compileSdkVersion 27
 
     defaultConfig {
         applicationId 'com.danikula.videocache.sample'
         minSdkVersion 15
-        targetSdkVersion 23
+        targetSdkVersion 27
         versionCode 1
         versionName '1.0'
     }
 }
 
-apt {
-    arguments {
-        androidManifestFile variant.outputs[0].processResources.manifestFile
-        resourcePackageName android.defaultConfig.applicationId
-    }
-}
-
 dependencies {
-//    compile project(':library')
-    compile 'com.android.support:support-v4:23.1.0'
-    compile 'org.androidannotations:androidannotations-api:3.3.2'
-    compile 'com.danikula:videocache:2.7.1'
-    compile 'com.viewpagerindicator:library:2.4.2-SNAPSHOT@aar'
-    apt 'org.androidannotations:androidannotations:3.3.2'
+    implementation project(':library')
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'org.androidannotations:androidannotations-api:3.3.2'
+//    implementation 'com.danikula:videocache:2.7.1'
+    implementation 'com.viewpagerindicator:library:2.4.2-SNAPSHOT@aar'
+
+    annotationProcessor "org.androidannotations:androidannotations:4.5.2"
+    implementation "org.androidannotations:androidannotations-api:4.5.2"
 }
